--- a/web/ajax/css.css
+++ b/web/ajax/css.css
@@ -51,7 +51,7 @@ a:hover {
 .main-login-form {
   position: relative;
 }
-.login-form-1 .form-control {
+.login {
   border: 0;
   box-shadow: 0 0 0;
   border-radius: 0;
@@ -88,34 +88,32 @@ a:hover {
   padding: 5px 0;
 }
 /*=== 5. Login Button ===*/
-.login-form-1 .login-button {
-  position: absolute;
-  right: -25px;
-  top: 50%;
-  background: #ffffff;
+.loginbutton {
+  
+  background: greenyellow;
   color: #999999;
   padding: 11px 0;
   width: 50px;
   height: 50px;
-  margin-top: -25px;
+  margin-top: 25px;
   border: 5px solid #efefef;
   border-radius: 50%;
   transition: all ease-in-out 500ms;
 }
-.login-form-1 .login-button:hover {
+.loginbutton:hover {
   color: #555555;
   transform: rotate(450deg);
 }
-.login-form-1 .login-button.clicked {
+.loginbutton.clicked {
   color: #555555;
 }
-.login-form-1 .login-button.clicked:hover {
+.loginbutton.clicked:hover {
   transform: none;
 }
-.login-form-1 .login-button.clicked.success {
+.loginbutton.clicked.success {
   color: #2ecc71;
 }
-.login-form-1 .login-button.clicked.error {
+.loginbutton.clicked.error {
   color: #e74c3c;
 }
 /*=== 6. Form Invalid ===*/
