--- a/web/ajax/css.css
+++ b/web/ajax/css.css
@@ -21,7 +21,7 @@ Last change	: 2015/03/27
 /*=== 1. General Structure ===*/
 html,
 body {
-  background: #efefef;
+  background: #E9F9CD;
   padding: 10px;
   font-family: 'Varela Round';
 }
