--- a/web/ajax/csspageAppel.css
+++ b/web/ajax/csspageAppel.css
@@ -12,8 +12,8 @@ caption{
 	background:	 #f6e8e8;
 }
 td {
-	width: 150px;
-	text-align: center
+	width: 180px;
+	text-align: center;
 }
 
 th{
@@ -26,6 +26,10 @@ h1 {
 
 h2 {
     color:#0000ff;
+    position: relative;
+    left:40%;
+    margin-top: 70px;
+    width:300px ;
 }
 
 .entete{
@@ -35,35 +39,53 @@ h2 {
 
 .logo{ 
 }
-
-.info_personne{
+.logoImg{
+  width:120px;   
+  height:96px;  
 }
 
-.info_choisir{
-
+.info_personne{
+    position: relative;
+	left:  70%;
+    width:200px ;
+}
+select{
+    width: 150px;
+}
+#duree{
+    width: 50px;
 }
 
 .renseigner_creneau_tab{
-
+    position: relative;
+    left: 20%;
 }
 
 .info_dh{
 }
 
 .info_dh_tab{
+    position: relative;
+    left: 20%;
+    margin-top: 30px;
 }
 
-.list_etudiant{
-
+.list_etudiant{  
 }
 
 .listEtudiant{
+    position: relative;
+    left: 20%;
+    margin-top: 30px;
+    max-width:500px;
 }
 
 
 .div_bouton{
-	
-
+	position: relative;
+	left:  40%;
+	margin-top: 20px;
+        width:200px ;
 }
 
 .btn_initialiser {
@@ -93,4 +115,41 @@ h2 {
 	margin-bottom: 50px;
 }
 
+/*
+-- css de timePicker ---
+*/
 
+/* ---------------------
+  CSS timePicker 
+   ---------------------
+*/
+
+label.timePicker {
+  color: #945;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+input.timePicker {
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='40'><circle cx='20' cy='20' r='18.5' fill='none' stroke='%23222' stroke-width='3' /><path d='M20,4 20,8 M4,20 8,20 M36,20 32,20 M20,36 20,32' stroke='%23bbb' stroke-width='1' /><circle cx='20' cy='20' r='2' fill='%23222' stroke='%23222' stroke-width='2' /></svg>"), url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='40'><path d='M18.5,24.5 19.5,4 20.5,4 21.5,24.5 Z' fill='%23222' style='transform:rotate(120deg); transform-origin: 50% 50%;' /></svg>"), url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='40'><path d='M18.5,24.5 19.5,8.5 20.5,8.5 21.5,24.5 Z' style='transform:rotate(20deg); transform-origin: 50% 50%;' /></svg>");
+  background-position: 0.5rem 50%;
+  background-repeat: no-repeat;
+  background-size: 2rem 2rem;
+  border: 0.25rem solid #945;
+  border-radius: 1rem;
+  color: #222;
+  font-size: 2rem;
+  padding: 0.5rem 0.5rem 0.5rem 3rem;
+  transition: backgroundImage 0.25s;
+}
+
+input.timePicker:focus {
+  outline: 2px dashed #945;
+  outline-offset: 3px;
+}
+
+
+#msg_timeErr{
+  display: none;
+  color:red;
+}
